objects/OrderEmailContent__c.object
<CustomObject>
    <fields>
        <fullName>EmailContent__c</fullName>
        <label>EmailContent</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RH_Order__c</fullName>
        <label>RH Order</label>
        <referenceTo>RH_Order__c</referenceTo>
        <relationshipLabel>OrderEmailContent</relationshipLabel>
        <relationshipName>OrderEmailContent</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>OrderEmailContent</label>
    <nameField>
        <displayFormat>OEC-{0000000000}</displayFormat>
        <label>OrderEmailContent Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OrderEmailContent</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>